--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-native": "^4.0.1",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-device": "^5.6.0",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -24,8 +27,7 @@
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-camera": "~13.4.4"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
