--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.1",
@@ -18,7 +18,7 @@
     "babel-preset-react-native": "^4.0.1",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
-    "expo-device": "^5.6.0",
+    "expo-device": "~5.4.0",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
