--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-native": "^4.0.1",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
     "expo-notifications": "~0.20.1",
@@ -25,11 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-camera": "^4.2.1",
-    "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-av": "~13.4.1"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
