--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "2.4.10",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.1",
@@ -18,6 +19,7 @@
     "babel-preset-react-native": "^4.0.1",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
     "expo-notifications": "~0.20.1",
@@ -27,8 +29,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-build-properties": "~0.8.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
