--- a/app.json
+++ b/app.json
@@ -23,6 +23,9 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "googleServicesFile": "./google-services.json",
+      "permissions": ["NOTIFICATIONS"],
+      "useNextNotificationsApi": true,
       "package": "com.bts"
     },
     "web": {
@@ -41,6 +44,13 @@
           "android": {
             "usesCleartextTraffic": true
           }
+        }
+      ],
+       [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#ffffff"
         }
       ]
     ]
