--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
-    "expo-file-system": "^15.6.0",
+    "expo-file-system": "15.4.5",
     "expo-image-manipulator": "~11.3.0",
     "expo-linking": "~5.0.2",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
-    "expo-video-thumbnails": "^7.6.0",
+    "expo-video-thumbnails": "7.4.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-text-input-mask": "^3.2.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
