--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native": "0.72.6",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "expo-barcode-scanner": "~12.5.3"
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
