--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
         "backgroundColor": "#ffffff"
       },
       "googleServicesFile": "./google-services.json",
-      "permissions": ["NOTIFICATIONS"],
+      "permissions": ["NOTIFICATIONS","CAMERA", "RECORD_AUDIO"],
       "useNextNotificationsApi": true,
       "package": "com.bts"
     },
@@ -50,7 +50,8 @@
         "expo-notifications",
         {
           "icon": "./assets/icon.png",
-          "color": "#ffffff"
+          "color": "#ffffff",
+          "mode": "production"
         }
       ]
     ]
