--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "typescript": "^5.1.3",
     "expo-barcode-scanner": "~12.5.3",
     "expo-location": "~16.1.0",
-    "expo-splash-screen": "~0.20.5"
+    "expo-splash-screen": "~0.20.5",
+    "expo-constants": "~14.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
