--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.bts"
+      "bundleIdentifier": "com.cosmo4bsta.bts"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,7 +25,6 @@
       },
       "googleServicesFile": "./google-services.json",
       "permissions": ["NOTIFICATIONS","CAMERA", "RECORD_AUDIO"],
-      "useNextNotificationsApi": true,
       "package": "com.bts"
     },
     "web": {
